# gdrusttemplate

./: LICENSE  README.md
demo/: icon.svg.import
demo/.godot/editor/: filesystem_cache8  project_metadata.cfg
rust/: .gitignore  Cargo.toml
rust/src/: lib.rs
