[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["{{authors}}"]
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
